{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 334,
  "lineage": "ad4b4f55-c9da-e483-3b6f-adc63ad27431",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-06e7f91ac149c8fc9",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:136279434049:subnet/subnet-06e7f91ac149c8fc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "available_ip_address_count": 245,
            "cidr_block": "172.16.3.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e7f91ac149c8fc9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "136279434049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "state": "available",
            "tags": {
              "Environment": "Development",
              "Name": "recupe-dev-private-subnet-2",
              "Owner": "ravi@plethy.com",
              "Project": "Recupe"
            },
            "vpc_id": "vpc-0f3391e84c4f0ce79"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-09a5205170294f953",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:136279434049:subnet/subnet-09a5205170294f953",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "available_ip_address_count": 244,
            "cidr_block": "172.16.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a5205170294f953",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "136279434049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "state": "available",
            "tags": {
              "Environment": "Development",
              "Name": "recupe-dev-prviate-subnet-1",
              "Owner": "ravi@plethy.com",
              "Project": "Recupe"
            },
            "vpc_id": "vpc-0f3391e84c4f0ce79"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-020772b505a06f11e",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:136279434049:subnet/subnet-020772b505a06f11e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "available_ip_address_count": 246,
            "cidr_block": "172.16.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020772b505a06f11e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "136279434049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "state": "available",
            "tags": {
              "Environment": "Development",
              "Name": "recupe-dev-public-subnet-1",
              "Owner": "ravi@plethy.com",
              "Project": "Recupe"
            },
            "vpc_id": "vpc-0f3391e84c4f0ce79"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-0ad2a482ea544e2eb",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:136279434049:subnet/subnet-0ad2a482ea544e2eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "available_ip_address_count": 246,
            "cidr_block": "172.16.4.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad2a482ea544e2eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "136279434049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "state": "available",
            "tags": {
              "Environment": "Development",
              "Name": "recupe-dev-public-subnet-2",
              "Owner": "ravi@plethy.com",
              "Project": "Recupe"
            },
            "vpc_id": "vpc-0f3391e84c4f0ce79"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:136279434049:vpc/vpc-0f3391e84c4f0ce79",
            "cidr_block": "172.16.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0b5383149f9315155",
                "cidr_block": "172.16.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-5f52d827",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f3391e84c4f0ce79",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0634193ea8e3c928c",
            "owner_id": "136279434049",
            "region": "us-west-2",
            "tags": {
              "Environment": "Development",
              "Name": "recupe-dev",
              "Owner": "ravi@plethy.com",
              "Project": "Recupe"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:136279434049:loadbalancer/app/hello-world-app-alb/485cf8072f0b5671",
            "arn_suffix": "app/hello-world-app-alb/485cf8072f0b5671",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "hello-world-app-alb-487699906.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:136279434049:loadbalancer/app/hello-world-app-alb/485cf8072f0b5671",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hello-world-app-alb",
            "preserve_host_header": false,
            "region": "us-west-2",
            "security_groups": [
              "sg-0a808b9f5e93971b4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-020772b505a06f11e"
              },
              {
                "subnet_id": "subnet-0ad2a482ea544e2eb"
              }
            ],
            "subnets": [
              "subnet-020772b505a06f11e",
              "subnet-0ad2a482ea544e2eb"
            ],
            "tags": {
              "Name": "hello-world-app-alb"
            },
            "tags_all": {
              "Name": "hello-world-app-alb"
            },
            "vpc_id": "vpc-0f3391e84c4f0ce79",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:136279434049:loadbalancer/app/hello-world-app-alb/485cf8072f0b5671"
          },
          "dependencies": [
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_forward",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:136279434049:listener/app/hello-world-app-alb/485cf8072f0b5671/ec15cea5ab236f37",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:136279434049:targetgroup/hello-world-app-tg/a97e4de21151b1c3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:136279434049:listener/app/hello-world-app-alb/485cf8072f0b5671/ec15cea5ab236f37",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:136279434049:loadbalancer/app/hello-world-app-alb/485cf8072f0b5671",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:136279434049:listener/app/hello-world-app-alb/485cf8072f0b5671/ec15cea5ab236f37"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.main",
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:136279434049:targetgroup/hello-world-app-tg/a97e4de21151b1c3",
            "arn_suffix": "targetgroup/hello-world-app-tg/a97e4de21151b1c3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:136279434049:targetgroup/hello-world-app-tg/a97e4de21151b1c3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "hello-world-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "hello-world-app-tg"
            },
            "tags_all": {
              "Name": "hello-world-app-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f3391e84c4f0ce79"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:136279434049:targetgroup/hello-world-app-tg/a97e4de21151b1c3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:136279434049:security-group/sg-0a808b9f5e93971b4",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a808b9f5e93971b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hello-world-app-alb-sg",
            "name_prefix": "",
            "owner_id": "136279434049",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hello-world-app-alb-sg"
            },
            "tags_all": {
              "Name": "hello-world-app-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3391e84c4f0ce79"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136279434049",
            "id": "sg-0a808b9f5e93971b4",
            "region": "us-west-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "codebuild_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:136279434049:security-group/sg-02e7a8a802b01c069",
            "description": "Security group for CodeBuild project",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e7a8a802b01c069",
            "ingress": [],
            "name": "hello-world-app-codebuild-sg",
            "name_prefix": "",
            "owner_id": "136279434049",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hello-world-app-codebuild-sg"
            },
            "tags_all": {
              "Name": "hello-world-app-codebuild-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3391e84c4f0ce79"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136279434049",
            "id": "sg-02e7a8a802b01c069",
            "region": "us-west-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:136279434049:security-group/sg-00296a55b0b623778",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00296a55b0b623778",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a808b9f5e93971b4"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hello-world-app-ecs-sg",
            "name_prefix": "",
            "owner_id": "136279434049",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hello-world-app-ecs-sg"
            },
            "tags_all": {
              "Name": "hello-world-app-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3391e84c4f0ce79"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136279434049",
            "id": "sg-00296a55b0b623778",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.alb"
          ]
        }
      ]
    }
  ]
}